<resources>
    <string name="app_name">Animals Quiz App</string>
    <string name="flamingo_question">1. Why are some flamingos bright red?</string>
    <string name="flamingo_answer_option_1">Because they\'re born that way.</string>
    <string name="flamingo_answer_option_2">Because they\'re constantly furious.</string>
    <string name="flamingo_answer_option_3">Because of what they eat.</string>
    <string name="flamingo_answer_option_4">Because they sunbathe a lot.</string>
    <string name="lion_question">2. Which are the two largest \'big cats\'?</string>
    <string name="polarbear_question">5. Where do polar bears live?</string>
    <string name="lion_answer_option_leopard">Leopard</string>
    <string name="polarbear_answer_option_arctic">Arctic (North)</string>
    <string name="polarbear_answer_option_antarctica">Antarctica (South)</string>
    <string name="lion_answer_option_lion">Lion</string>
    <string name="lion_answer_option_jaguar">Jaguar</string>
    <string name="lion_answer_option_tiger">Tiger</string>
    <string name="shark_question">3. Which species of shark has a head shaped like a hand tool?</string>
    <string name="shark_input_field_hint">Write answer here</string>
    <string name="elephant_question">4. How long is the elephant\'s gestation period?</string>
    <string name="elephant_answer_option_3_months">3 months</string>
    <string name="elephant_answer_option_9_months">9 months</string>
    <string name="elephant_answer_option_22_months">22 months</string>
    <string name="compute_score_button_label">Compute my score</string>
    <string name="score_heading">Score:</string>
    <string name="feedback_heading">Feedback:</string>
    <string name="flamingo_correct_answer">1. Correct</string>
    <string name="flamingo_answer_explanation">Some flamingos are bright red because of what they eat.</string>
    <string name="lion_incorrect_answer">2. Incorrect</string>
    <string name="polarbear_incorrect_answer">2. Incorrect</string>
    <string name="lion_answer_explanation">The largest big cat is the tiger, and the second largest is the lion.</string>
    <string name="polarbear_answer_explanation">Polar bears live only in the Arctic.</string>
    <string name="shark_correct_answer">3. Correct</string>
    <string name="shark_answer_explanation">The species of shark with a tool-shaped head is the hammerhead.</string>
    <string name="elephant_incorrect_answer">4. Incorrect</string>
    <string name="elephant_answer_explanation">The elephant\'s gestation period is 22-months long. It\'s the longest of any animal.</string>
    <string name="flamingo_description">Flamingo on water</string>
    <string name="lion_description">Menacing lion</string>
    <string name="shark_description">Shark showing his teeth</string>
    <string name="elephant_description">Elephant in the savanna</string>
    <string name="polar_bear_description">Polar bear on snow</string>
</resources>
